Fixed login-signup spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,3 +88,8 @@
   .icon-blue {
     color: #080124;
   }
+
+  .login-card {
+    padding-right: 25px;
+    width: 350px;
+  }
